# hsllvm

./: README.md  hsllvm.cabal  kalep.cabal  stack.yaml
docs/: language-syntax.md
src/: Hsllvm.hs  Kalep.hs  Main.hs
src/Hsllvm/: Codegen.hs  Lexer.hs  Parser.hs  Syntax.hs
src/Kalep/: Lexer.hs  Parser.hs  Syntax.hs
