name:                kalep
version:             0.1.0.0
synopsis:            Play LLVM with Haskell.
description:         Play LLVM with Haskell.
homepage:            https://github.com/tz70s/kalep#readme
license:             BSD3
license-file:        LICENSE
author:              Tzu-Chiao Yeh
maintainer:          su3g4284zo6y7@gmail.com
copyright:           Tzu-Chiao Yeh (c) 2019
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable kalep
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Kalep
                     , Kalep.Parser
                     , Kalep.Lexer
                     , Kalep.Syntax
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , parsec
